change btc libraries

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,7 @@
     "-s",
     "./btc_wallet",
     "-p",
-    "*test.py"
+    "test*.py"
   ],
   "python.testing.pytestEnabled": false,
   "python.testing.unittestEnabled": true
