--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ path = "btc_wallet/__about__.py"
 dependencies = [
   "pytest",
   "pytest-cov",
+  "pyperclip",
 ]
 [tool.hatch.envs.default.scripts]
 cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=btc_wallet --cov=tests"
