seed encryption works

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,7 +43,9 @@ path = "btc_wallet/__about__.py"
 dependencies = [
   "pytest",
   "pytest-cov",
+  "pytest-dependency",
   "pyperclip",
+  "cryptography",
 ]
 [tool.hatch.envs.default.scripts]
 cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=btc_wallet --cov=tests"
